Implements v2.1.1-rc1  - Plugin isolation: Each guild can disable plugin from admin enabled pool  - Dynamic Branding: Allow fork / self-hosted to describe branding name without touch coding  - Rewrite architecture docs  - OpenAPI Swagger UI
Minor change
 - Change copyright holder to relate organize name
 - Update POM dependency version to latest
 - Rewrite BuiltinCommands to using ComponentV2 and Easily UI point and click mostly

NOTE
 - This rc contain migration of database look at V9_add_guild_disabled_plugins.sql